--- a/pom.xml
+++ b/pom.xml
@@ -51,15 +51,17 @@
 			<url>https://m2.objectdb.com</url>
 		</repository>
 	</repositories>
+	
+	
 
 	<properties>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 
-		<sonar.organization>jononekin</sonar.organization>
+		<sonar.organization>estibalizleza</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.projectKey>jononekin_monopolyci</sonar.projectKey>
-		<sonar.login>90a468852cc035e4be637130569e928051818a41</sonar.login>
+		<sonar.projectKey>estibalizleza_monopolyci</sonar.projectKey>
+		<sonar.login>db6a62fb6b9e062c7ff1e4b164cd9a1f331d1987</sonar.login>
 	</properties>
 
 	<!-- https://mvnrepository.com/artifact/junit/junit -->
